receipts-system/main/default/objects/Receipt_Serie__c/Receipt_Serie__c.object-meta.xml
<CustomObject>
    <label>Receipt Serie</label>
    <nameField>
        <displayFormat>SERIE-{00000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>