receipts-system/main/default/objects/Receipt_Serie__c/fields/Last_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Number__c</fullName>
    <label>Último Número</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>