receipts-system/main/default/objects/Receipt_Serie__c/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <label>Prefixo</label>
    <length>5</length>
    <type>Text</type>
</CustomField>