receipts-system/main/default/objects/Receipt_Serie__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Tipo de Transação</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Organizational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>