receipts-system/main/default/objects/Receipt_Serie__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Ano</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>